Adds CSV export functionality

--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 
     <script src="lib/vue.min.js"></script>
+    <script src="lib/FileSaver.min.js"></script>
+
     <script src="parser.js"></script>
     <script src="app.js"></script>
 </head>
