Adjusts UI content slightly

--- a/client/index.html
+++ b/client/index.html
@@ -80,7 +80,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                 <input type="button" class="tableButton" id="copyButton" value="Copy to Clipboard" v-on:click="CopyTable">
             </div>
         </div>
-        <h2 v-else>Parse a file to see the results here. Click or drag onto the field above to select a file.</h2>
+        <h2 v-else>Parse a file to see the results here. Click or drag onto the field above to select a file. Multi-file selections are supported.</h2>
     </div>
 </div>
 
