Renames 'donate' to 'tip jar'

--- a/client/index.html
+++ b/client/index.html
@@ -85,7 +85,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 </div>
 
 <footer>
-        Copyright &copy; 2020 Jake Alaimo | <a href="https://www.nexusmods.com/users/7101768?tab=user+files">My Mods</a> | <a href="https://paypal.me/jakealaimo" title="Thanks!">Donate</a>
+        Copyright &copy; 2020 Jake Alaimo | <a href="https://www.nexusmods.com/users/7101768?tab=user+files">My Mods</a> | <a href="https://paypal.me/jakealaimo" title="Thanks!">Tip Jar</a>
 </footer>
 
 </body>
